# oskerpoker-comments

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  cli.py  cv.py  datastore.py  main.py  pyproject.toml  stage.py  utils.py
.github/workflows/: docker.yaml  lint.yaml  run-test.yaml
movieparser/: __init__.py  cli.py  cv.py  datastore.py  stage.py  utils.py
player/: __init__.py  fixname.py  playerlist.py  test_fixname.py  test_playerlist.py
web/: __init__.py  models.py  processor.py  web.py
web/templates/: index.html  movies.html
web/templates/blocks/: header.html  movies.html
