[tool.poetry]
name = "oskerpoker-comments"
version = "0.1.0"
description = ""
authors = ["whywaita"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^68.2.2"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
